# rules_rust

./: BUILD.bazel
bindgen/: BUILD.bazel
bindgen/raze/: BUILD.bazel
cargo/: BUILD.bazel
cargo/bootstrap/: BUILD.bazel
cargo/cargo_build_script_runner/: BUILD.bazel
cargo/private/: BUILD.bazel
crate_universe/: BUILD.bazel
crate_universe/private/: BUILD.bazel
crate_universe/tools/: BUILD.bazel
distro/: BUILD.bazel  publisher.sh
docs/: BUILD.bazel  update_docs.sh
examples/: BUILD.bazel
examples/ambiguous_deps/: BUILD.bazel
examples/bindgen/: BUILD.bazel
examples/cargo/: BUILD.bazel
examples/crate_universe/: BUILD.bazel
examples/env_locations/: BUILD.bazel
examples/ffi/: BUILD.bazel
examples/fibonacci/: BUILD.bazel
examples/flag_locations/: BUILD.bazel
examples/hello_lib/: BUILD.bazel
examples/hello_runfiles/: BUILD.bazel
examples/hello_world/: BUILD.bazel
examples/per_platform_printer/: BUILD.bazel
examples/proc_macro/: BUILD.bazel
examples/proto/: BUILD.bazel
examples/shared_libs/: BUILD.bazel
examples/sys/: BUILD.bazel
examples/version_stamping/: BUILD.bazel
examples/wasm/: BUILD.bazel
proto/: BUILD.bazel
proto/patches/: BUILD.bazel
proto/raze/: BUILD.bazel
rust/: BUILD.bazel  repositories.bzl
rust/platform/: BUILD.bazel  platform.bzl  triple_mappings.bzl
rust/private/: BUILD.bazel  rustc.bzl
rust/settings/: BUILD.bazel
rust/toolchain/: BUILD.bazel
test/: BUILD.bazel
tools/: BUILD.bazel
tools/runfiles/: BUILD.bazel
util/: BUILD.bazel  fetch_shas.sh
wasm_bindgen/: BUILD.bazel
(+41 files in other folders)
